# rc5-cbc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: lib.rs  rc5-cbc.rs  rc5.rs
tests/: block.rs  cli.rs  roundtrip.rs
