[package]
name = "rc5-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4", features = ["derive"] }
num = "0.4.0"

[[bin]]
name = "rc5-cbc"
path = "./src/rc5-cbc.rs"
