[package]
name = "rc5-course"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
num = "0.4"

[dev-dependencies]
proptest    = "1"
rand        = "0"
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"
